TAG: seqcacheload-1-0-11
DATE: 06/04/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) check bcp file before truncating/loading

TAG: seqcacheload-1-0-10
DATE: 06/03/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) don't cache dummy annotations if the real thing exists

TAG: seqcacheload-1-0-9
DATE: 06/02/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) don't cache dummy annotations if the real thing exists

TAG: seqcacheload-1-0-8
DATE: 05/13/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) added update statistics

TAG: seqcacheload-1-0-7
TAG: seqcacheload-1-0-6
TAG: seqcacheload-1-0-5
DATE: 03/30/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) added "annotation" date to cache tables
2) added seqdescription.csh seqdescription.py

TAG: seqcacheload-1-0-4
DATE: 03/26/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) added "annotation" date to cache tables

TAG: seqcacheload-1-0-3
TAG: seqcacheload-1-0-2
DATE: 03/25/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) added "annotation" date to cache tables

TAG: seqcacheload-1-0-1
DATE: 02/06/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) added "output" directory

TAG: seqcacheload-1-0-0
DATE: 12/02/2003
STAFF: lec
RELEASE: A
CHANGES: New CVS repository
