@@ -1,3 +1,10 @@
+TAG: 
+DATE: 07/21/2004
+STAFF: lec
+RELEASE: A
+CHANGES: 
+1) Assembly/qualifier
+
 TAG: seqcacheload-1-0-11
 DATE: 06/04/2004
 STAFF: lec
